<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screenbg"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:src="@drawable/small_logo"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro_First_Line"
            android:textColor="@color/btnColorBlue"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="28sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro_second_line"
            android:textColor="@color/btnColorBlue"
            android:textAlignment="center"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro_LAST_line"
            android:textColor="@color/btnColorBlue"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btnloginbg"
            android:layout_marginTop="40sp"
            android:text="@string/btn_login"
            android:textColor="@color/bgWhite"
            android:textSize="20sp"
            android:id="@+id/btnlogin"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btnsignupbg"
            android:layout_marginTop="10sp"
            android:text="@string/btn_user_signup"
            android:textColor="@color/bgWhite"
            android:textSize="20sp"
            android:id="@+id/btnsignup"/>

    </LinearLayout>


</LinearLayout>