<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screenbg"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:src="@drawable/small_logo"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/User_Login"
            android:textAllCaps="true"
            android:textColor="@color/btnColorBlue"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="28sp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/UserEmailWrapper">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/UserEmail"
                android:inputType="textEmailAddress"
                android:hint="@string/Enter_Name"
                android:textColor="@color/btnColorBlue"
                android:textSize="18sp"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/UserPasswordWrapper">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/UserPassword"
                android:inputType="textPassword"
                android:hint="@string/Enter_Password"
                android:textColor="@color/btnColorBlue"
                android:textSize="18sp"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnUserLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btnloginbg"
            android:layout_marginTop="20sp"
            android:text="@string/SignIn"
            android:textSize="20sp"
            android:textColor="@color/bgWhite"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Or"
            android:textColor="@color/btnColorBlue"
            android:textAlignment="center"
            android:textSize="22sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"/>
        <TextView
            android:id="@+id/userSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_user_signup"
            android:textColor="@color/btnColorBlue"
            android:textAlignment="center"
            android:textSize="22sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"/>


    </LinearLayout>

</LinearLayout>