<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screenbg"
    tools:context=".RegisterActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10sp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="250sp"
                android:layout_height="200dp"
                android:src="@drawable/small_logo"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reg_msg"
                android:textAllCaps="true"
                android:layout_marginTop="20dp"
                android:textColor="@color/btnColorBlue"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="28sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">



            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:id="@+id/f_name_wrapper">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/f_name"
                    android:inputType="text"
                    android:hint="@string/f_name"
                    android:textColorHint="@color/btnColorBlue"
                    android:textColor="@color/btnColorBlue"
                    android:textSize="18sp"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:id="@+id/l_name_wrapper">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/l_name"
                    android:inputType="text"
                    android:hint="@string/l_name"
                    android:textColorHint="@color/btnColorBlue"
                    android:textColor="@color/btnColorBlue"
                    android:textSize="18sp"/>

            </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:id="@+id/emailwrapper">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:textColorHint="@color/btnColorBlue"
                    android:textColor="@color/btnColorBlue"
                    android:textSize="18sp"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">



                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:id="@+id/password_wrapper">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/password"
                        android:inputType="textPassword"
                        android:hint="@string/Enter_Password"
                        android:textColorHint="@color/btnColorBlue"
                        android:textColor="@color/btnColorBlue"
                        android:textSize="18sp"/>

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:id="@+id/confirm_password_wrapper">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/confirm_password"
                        android:inputType="textPassword"
                        android:hint="@string/Confirm_password"
                        android:textColorHint="@color/btnColorBlue"
                        android:textColor="@color/btnColorBlue"
                        android:textSize="18sp"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:id="@+id/contact_wrapper">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/contact_no"
                    android:inputType="number"
                    android:hint="@string/contact"
                    android:textColorHint="@color/btnColorBlue"
                    android:textColor="@color/btnColorBlue"
                    android:textSize="18sp"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btnloginbg"
                android:layout_marginTop="20sp"
                android:text="@string/btn_register"
                android:textSize="20sp"
                android:textColor="@color/bgWhite"/>

        </LinearLayout>


</LinearLayout>